--- a/yes.html
+++ b/yes.html
@@ -13,7 +13,8 @@
            width="200" />
 
       <h1>Hehehehe, I knew it! 😘</h1>
-      <p>You made my day! 💖🥰</p>
+      <p>I got a Cute and lovable Partner! 💖🥰</p>
     </div>
   </body>
 </html>
+
