--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="romantic-rain">
+  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
+  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+</div>
+
     <div class="container">
       <img src="https://media.giphy.com/media/1wmOyZYoGzz003R03Y/giphy.gif" 
            alt="Cute GIF" 
@@ -22,3 +27,4 @@
     </div>
   </body>
 </html>
+
