--- a/no1.html
+++ b/no1.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="romantic-rain">
+  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
+  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+</div>
+
     <div class="container">
       <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWFwcWQ3aWQxeGJ6MGVxb3ptZXQzYnNkOW5oZ2k1a3BhYWtoZW1tNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/aKViCaKAfCSwqdMVcK/giphy.gif" 
            alt="Funny GIF" 
@@ -22,4 +27,5 @@
     </div>
   </body>
 </html>
+
 
