--- a/no2.html
+++ b/no2.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="romantic-rain">
+  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
+  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+</div>
+
     <div class="container">
       <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbXNkZG5rM3lyaDYyYm9icjg4amJzOGIyenQwODVxaWRzb2djdXVlOCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/fpFa9Nl3QZOVYYRM83/giphy.gif" 
            alt="Sad Please GIF" 
@@ -22,3 +27,4 @@
     </div>
   </body>
 </html>
+
