--- a/no3.html
+++ b/no3.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="romantic-rain">
+  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
+  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+</div>
+
     <div class="container">
       <img src="https://media.giphy.com/media/vDdPekIaWDzKE/giphy.gif?cid=790b7611e31ta0er1a3aarf0syksj77xtmu3bxk7bkgmqv1t&ep=v1_gifs_search&rid=giphy.gif&ct=g" 
            alt="Sad Please GIF" 
@@ -24,4 +29,5 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
 
