--- a/yes.html
+++ b/yes.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="romantic-rain">
+  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
+  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+</div>
+
     <div class="container">
       <img src="https://media.giphy.com/media/1ym5LJ17vp77BL8X5O/giphy.gif?cid=790b7611j6uj259ajjv507gdx2727ay03xjxyjmvwyo5r15v&ep=v1_gifs_search&rid=giphy.gif&ct=g" 
            alt="Celebration GIF" 
@@ -17,4 +22,5 @@
     </div>
   </body>
 </html>
+
 
