--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div class="romantic-rain">
-  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
-  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+<head>
+    <meta charset="UTF-8">
+    <title>Moonlight Love</title>
+    <link rel="stylesheet" href="style1.css">
+</head>
+<body>
+
+<div class="scene">
+
+    <!-- Overlay for glow -->
+    <div class="overlay"></div>
+
+    <!-- Stars animation -->
+    <div class="stars"></div>
+
+    <!-- Content -->
+    <div class="content">
+        <button class="go-btn" onclick="goNext()"><a href="i1.html">Go To 💕</a></button>
+    </div>
+
 </div>
 
-    <div class="container">
-      <img src="https://media.giphy.com/media/1wmOyZYoGzz003R03Y/giphy.gif" 
-           alt="Cute GIF" 
-           width="200" />
-
-      <h1>Will You be my Valentine? 💖</h1>
-      <p>You make my world brighter. 🌟</p>
-
-      <div class="btn">
-        <a href="yes.html">Yes 💕</a>
-        <a href="no1.html">No 😢</a>
-      </div>
-    </div>
-  </body>
+<script src="script1.js"></script>
+</body>
 </html>
-
