--- a/yes.html
+++ b/yes.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="romantic-rain">
-  <span>💖</span><span>💗</span><span>💕</span><span>💘</span><span>💝</span>
-  <span>💞</span><span>💓</span><span>💟</span><span>🌸</span><span>✨</span>
+    <div class="love-effects">
+  <span>💖</span><span>💗</span><span>💕</span><span>💞</span>
+  <span>💘</span><span>💓</span><span>✨</span><span>🌸</span>
 </div>
+
 
     <div class="container">
       <img src="https://media.giphy.com/media/1ym5LJ17vp77BL8X5O/giphy.gif?cid=790b7611j6uj259ajjv507gdx2727ay03xjxyjmvwyo5r15v&ep=v1_gifs_search&rid=giphy.gif&ct=g" 
            alt="Celebration GIF" 
            width="200" />
+<div class="love-scene emotional">
+  <div class="love-sub">Thank You!</div>
+  <div class="love-name">________</div>
+</div>
+
+
+<div class="heart-particles"></div>
+
 
       <h1>Hehehehe, I knew it! 😘</h1>
       <p>I got a Cute and lovable Partner! 💖🥰</p>
