--- a/index.html
+++ b/index.html
@@ -2,22 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moonlight Love</title>
+    <title>Love</title>
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
 <div class="scene">
 
-    <!-- Overlay for glow -->
+    <!-- Glow overlay -->
     <div class="overlay"></div>
 
-    <!-- Stars animation -->
+    <!-- Stars -->
     <div class="stars"></div>
+
+    <div class="love-text">
+  <h1>This could be us 🌙</h1>
+  <p>
+    Under the same moon,<br>
+    beneath endless stars,<br>
+    hearts whispering promises<br>
+    the universe already knows 💫
+  </p>
+</div>
+
+<!-- Falling petals -->
+<div class="petals"></div>
+
+<!-- Shooting stars -->
+<div class="shooting-stars"></div>
+
 
     <!-- Content -->
     <div class="content">
-        <button class="go-btn" onclick="goNext()"><a href="i1.html">Go To 💕</a></button>
+        <a href="i1.html" class="go-btn">Go To 💕</a>
     </div>
 
 </div>
