--- a/yes.html
+++ b/yes.html
@@ -13,7 +13,8 @@
 </div>
 
 
-    <div class="container">
+<div class="container celebrate">
+
       <img src="https://media.giphy.com/media/1ym5LJ17vp77BL8X5O/giphy.gif?cid=790b7611j6uj259ajjv507gdx2727ay03xjxyjmvwyo5r15v&ep=v1_gifs_search&rid=giphy.gif&ct=g" 
            alt="Celebration GIF" 
            width="200" />
