--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+<audio id="bg-music" loop>
+  <source src="audio.mp3" type="audio/mpeg">
+</audio>
 
 <div class="scene">
 
