--- a/no3.html
+++ b/no3.html
@@ -11,6 +11,9 @@
   <span>💖</span><span>💗</span><span>💕</span><span>💞</span>
   <span>💘</span><span>💓</span><span>✨</span><span>🌸</span>
 </div>
+<audio id="bg-music" loop>
+  <source src="audio.mp3" type="audio/mpeg">
+</audio>
 
 
     <div class="container">
